# MinecraftFramework

./: .gitignore  .travis.yml  Buffer.cpp  Buffer.h  BufferedReaderWriter.cpp  BufferedReaderWriter.h  CMakeLists.txt  ClientSettingsPacket.cpp  ClientSettingsPacket.h  Functions.h  Handshake.cpp  Handshake.h  KeepAlivePacket.cpp  KeepAlivePacket.h  LoginStartPacket.cpp  LoginStartPacket.h  LoginSuccessPacket.cpp  LoginSuccessPacket.h  MinecraftBot.cpp  MinecraftBot.h  MinecraftBot.vcxproj  MinecraftBot.vcxproj.filters  Packet.cpp  Packet.h  Packets.h  PacketsList.h  PlayerPacket.cpp  PlayerPacket.h  PlayerPositionPacket.cpp  PlayerPositionPacket.h  PluginMessagePacket.cpp  PluginMessagePacket.h  README.md  ServerConnection.h  SpawnPositionPacket.cpp  SpawnPositionPacket.h  TcpClientSocket.cpp  TcpClientSocket.h  Types.cpp  Types.h  (+1 more)
